--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -271,7 +271,7 @@ Trends were evaluated over the entire twenty year period. Minimum data requireme
 
 ## Water Quality Status Assessment
 
-The status assessment is an evaluation of water quality data to determine if a waterbody attains water quality standards or TMDL targets. An attainment assessment was made for bacteria (*E. coli*, *Enterococcus*, and Fecal Coliform), dissolved oxygen, pH, and temperature in relation to the applicable numeric water quality criterion. For some waterbodies the applicable water quality criterion for these parameters is a narrative non-numeric criterion. In this situation, status was not determined.
+The status assessment is an evaluation of water quality data to determine if a waterbody attains water quality standards or TMDL targets. An attainment assessment was made for bacteria (*E. coli*, *Enterococcus*, and Fecal Coliform), dissolved oxygen, pH, and temperature in relation to the applicable numeric water quality criterion. For some waterbodies the applicable water quality criterion for these parameters is a narrative non-numeric criterion. In this situation, status was not determined. We used the 2018/2020 Integrated Report assessment methodology (DEQ 2020) to determine attainment within each status period. The methodology considers all the applicable criteria for each parameter as well as the number of excursions for attainment conclusions. The specific methodology for each status category are described for each parameter in the sections below.
 
 Oregon does not have explicit water quality standards for total phosphorus (TP) or total suspended solids (TSS); however, sometimes these parameters are pollutants that contribute to non-attainment of water quality standards. Often the impairment is based on standards established for dissolved oxygen, pH, sediment, or other chemicals. An attainment assessment was made for total phosphorus (TP) or total suspended solids (TSS) where a TMDL target has been established for these parameters. The following sections describe the water quality standards or applicable TMDL targets for each parameter assessed.
 
